force-app/main/default/objects/Application_Status_Update__c.object
<CustomObject>
    <label>Application Status Update</label>
    <nameField>
        <displayFormat>Status Update - {0000}</displayFormat>
        <label>Application Status Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Status Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>