force-app/main/default/objects/Application_Status_Update__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Application Status Updates</relationshipLabel>
    <relationshipName>Application_Status_Updatea</relationshipName>
    <type>Lookup</type>
</CustomField>