force-app/main/default/objects/Application_Status_Update__c/fields/Ingestion_Time__c.field-meta.xml
<CustomField>
    <fullName>Ingestion_Time__c</fullName>
    <label>Ingestion Time</label>
    <type>DateTime</type>
</CustomField>