force-app/main/default/objects/Application_Status_Update__c/fields/Status_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Time__c</fullName>
    <label>Status Time</label>
    <type>DateTime</type>
</CustomField>