force-app/main/default/objects/Application_Status_Update__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>Submission__c</referenceTo>
    <relationshipLabel>Application Status Updatea</relationshipLabel>
    <relationshipName>Application_Status_Updatea</relationshipName>
    <type>Lookup</type>
</CustomField>